# AndroidMedia

./: README.md
AndroidMediaDemo/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
AndroidMediaDemo/app/src/androidTest/java/com/study/yanhaolu/androidmediademo/: ExampleInstrumentedTest.java
AndroidMediaDemo/app/src/main/: AndroidManifest.xml
AndroidMediaDemo/app/src/main/cpp/: VideoConvert.cpp  native-lib.cpp
AndroidMediaDemo/app/src/main/cpp/ffmpeg/: CMakeLists.txt  ffmpeg_lib.cpp
AndroidMediaDemo/app/src/main/java/com/media/yanhaolu/androidmediademo/: MainActivity.java
AndroidMediaDemo/app/src/main/java/com/media/yanhaolu/audio/: AudioMainActivity.java  PlayImpl.java  RecordImpl.java
AndroidMediaDemo/app/src/main/java/com/media/yanhaolu/camera/: Camera1SurfaceViewActivity.java  Camera1TextureViewActivity.java  CameraMainActivity.java
AndroidMediaDemo/app/src/main/java/com/media/yanhaolu/ffmpeg/: FFmpegActivity.java
AndroidMediaDemo/app/src/main/java/com/media/yanhaolu/image/: Drag.java
AndroidMediaDemo/app/src/main/java/com/media/yanhaolu/jni/: DataConvert.java
AndroidMediaDemo/app/src/main/java/com/media/yanhaolu/media/: MediaCodecActivity.java  MediaExactorMediaMuxerActivity.java
AndroidMediaDemo/app/src/main/java/com/media/yanhaolu/opengl/camera/: GLRender_Camera.java  GLSurfaceView_Camera.java  ICamera.java  KitkatCamera.java  OpenGL_Camera_Activiry.java
AndroidMediaDemo/app/src/main/java/com/media/yanhaolu/opengl/camra2mp4/: GLRender_Camera2mp4.java  GLSurfaceView_Camera2mp4.java  ICamera2mp4.java  KitkatCamera2mp4.java  OpenGL_Camera2mp4_Activiry.java
AndroidMediaDemo/app/src/main/java/com/media/yanhaolu/utils/: DensityUtils.java  EasyGlUtils.java  Gl2Utils.java  PermissionUtils.java  ShaderUtils.java
AndroidMediaDemo/app/src/main/java/com/media/yanhaolu/widget/: CircularProgressView.java
AndroidMediaDemo/app/src/main/jniLibs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
AndroidMediaDemo/app/src/main/res/layout/: activity_audio_main.xml  activity_camera1.xml  activity_camera1_texture_view.xml  activity_camera2mp4.xml  activity_camera_main.xml  activity_ffmpeg.xml  activity_main.xml  activity_media_codec.xml  activity_media_exactor_media_muxer.xml  item_button.xml
AndroidMediaDemo/app/src/main/res/values/: strings.xml
AndroidMediaDemo/app/src/test/java/com/study/yanhaolu/androidmediademo/: ExampleUnitTest.java
AndroidMediaDemo/gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
